--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <h3>Minoring in Artificial Intelligence</h3> 
             <a href="#projects" class="main-btn">View my work</a>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/saadtaslaq/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/saadtaslaq"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </section>
@@ -47,37 +47,6 @@
                 lovely beaches over here. I always like to further expand my knowledge, so when I am free I take new courses and explore the latest technologies advancements.
             </h2>
         </div>
-        <!---
-        <div class="content">
-            <div class="card">
-                <div class="icon">
-                    <i class="fas fa-edit"></i>
-                </div>
-                <div class="info">
-                    <h3>Script Writing</h3>
-                    <p>Research and write scripts for different topics that can then be directly recorded for video production</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="icon">
-                    <i class="fas fa-video"></i>
-                </div>
-                <div class="info">
-                    <h3>Video Production</h3>
-                    <p>Record and shoot videos taking into consideration proper settings, followed by production & post-production work</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="icon">
-                    <i class="fas fa-graduation-cap"></i>
-                </div>
-                <div class="info">
-                    <h3>Curriculum Development</h3>
-                    <p>Develop complete curriculums for various technical topics to produce digital transformative courses</p>
-                </div>
-            </div>
-        </div>
-        --->
     </section>
 
     <section class="projects" id="projects">
