--- a/index.html
+++ b/index.html
@@ -47,6 +47,37 @@
                 lovely beaches over here. I always like to further expand my knowledge, so when I am free I take new courses and explore the latest technologies advancements.
             </h2>
         </div>
+        <!---
+        <div class="content">
+            <div class="card">
+                <div class="icon">
+                    <i class="fas fa-edit"></i>
+                </div>
+                <div class="info">
+                    <h3>Script Writing</h3>
+                    <p>Research and write scripts for different topics that can then be directly recorded for video production</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fas fa-video"></i>
+                </div>
+                <div class="info">
+                    <h3>Video Production</h3>
+                    <p>Record and shoot videos taking into consideration proper settings, followed by production & post-production work</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fas fa-graduation-cap"></i>
+                </div>
+                <div class="info">
+                    <h3>Curriculum Development</h3>
+                    <p>Develop complete curriculums for various technical topics to produce digital transformative courses</p>
+                </div>
+            </div>
+        </div>
+        --->
     </section>
 
     <section class="projects" id="projects">
@@ -112,6 +143,19 @@
                     <strong class="project-title">
                         <span>Skin Cancer Detection using Machine Learning</span>
                         <a href="https://drive.google.com/drive/folders/1DRbpA37GJQTRKAH5yYr698Jrn7Tm-R_Q?usp=sharing" class="more-details">More details</a>
+                    </strong>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="karl-pawlowicz-QUHuwyNgSA0-unsplash.webp" />
+                </div>
+                <div class="project-info">
+                    <p class="project-category">                              </p>
+                    <strong class="project-title">
+                        <span>MetaQI</span>
+                        <a href="https://github.com/metaQI/project-meta" class="more-details">More details</a>
                     </strong>
                 </div>
             </div>
